1998-05-20  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (INCLUDES): Define _GNU_SOURCE.

1998-05-19  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-h.c (strerror): Emit declaration.
	* strerror.c: New file.  Imported from GNU libiberty.

1998-05-19  Martin Baulig  <martin@home-of-linux.org>

	* vsnprintf.c (vsnprintf): Changed declaration of this
	function on systems defining __STDC__ to avoid clash
	with prototype in system header file.

	* vsnprintf.c (snprintf): Moved toward the end of the
	file, so that the compiler sees correct declaration for
	vsnprintf().

1998-05-12  Kjartan Maraas  <kmaraas@fib.hl.no>

	* argp-help.c (argp_doc): Backed out previous "fix". :-)
	As pointed out it was dead wrong.
	
1998-05-09  Kjartan Maraas  <kmaraas@fib.hl.no>

	* argp-help.c (argp_doc): Removed a compiler warning.

1998-04-14  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-h.c (main): Make gnomesupport.h include stddef.h
	unconditionally. 

1998-04-13  Raja R Harinath  <harinath@cs.umn.edu>

	* scandir.c (<sys/types.h>): Include.
	* gnomesupport-h.c (!HAVE_SCANDIR): Do all the `dirent' wrangling
	only if `scandir' is needed.  Also, include <sys/types.h> in all
	cases. 

1998-04-13  Seth Alves  <alves@twitch.cp.domain.net>

	* gnomesupport-h.c (HAVE_DIRENT_H): FreeBSD needs <sys/types.h>
	before <dirent.h>.
	
1998-04-12  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (supportincludedir): Is now $(pkglibdir)/include.
	`gnomesupport.h' is a generated file dependent on the configure
	process.  So, this seems a good place.  The rest of the headers
	are also here just because I'm too lazy to maintain two separate
	include directories to search in for `libgnomesupport' stuff ;-)
	(supportinclude_DATA): New var.  Has `gnomesupport.h'.
	(BUILT_SOURCES): Generate `gnomesupport.h'.

	* gnomesupport-h.c: New file.  Used to generate `gnomesupport.h',
	which contains prototypes for many of the functions in