@@ -1,3 +1,9 @@
+Thu May 21 21:21:12 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* gnome-argp.h: Unconditionally declare program_invocation_name
+	and program_invocation_short_name; some systems define these but
+	don't declare them.
+
 1998-05-20  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* Makefile.am (INCLUDES): Define _GNU_SOURCE.
